pkg/lang/testdata/ub/config/invalid/input-qualified-call.ub
inputs: { x: core.format('hi') }
